# cmake-samples

.ccls-cache/@@home@marcos@Estudos@cmake/: @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  @usr@include@c++@10@bits@functexcept.h.blob  @usr@include@c++@10@bits@functional_hash.h.blob  @usr@include@c++@10@bits@hash_bytes.h.blob  @usr@include@c++@10@bits@int_limits.h.blob  @usr@include@c++@10@bits@iterator_concepts.h.blob  @usr@include@c++@10@bits@memoryfwd.h.blob  @usr@include@c++@10@bits@move.h.blob  @usr@include@c++@10@bits@nested_exception.h.blob  @usr@include@c++@10@bits@predefined_ops.h.blob  @usr@include@c++@10@bits@ptr_traits.h.blob  @usr@include@c++@10@bits@range_access.h.blob  @usr@include@c++@10@bits@range_cmp.h.blob  @usr@include@c++@10@bits@stl_algobase.h.blob  @usr@include@c++@10@bits@stl_bvector.h.blob  @usr@include@c++@10@bits@stl_construct.h.blob  @usr@include@c++@10@bits@stl_iterator.h.blob  @usr@include@c++@10@bits@stl_iterator_base_funcs.h.blob  @usr@include@c++@10@bits@stl_iterator_base_types.h.blob  @usr@include@c++@10@bits@stl_pair.h.blob  @usr@include@c++@10@bits@stl_uninitialized.h.blob  @usr@include@c++@10@bits@stl_vector.h.blob  @usr@include@c++@10@bits@vector.tcc.blob  @usr@include@c++@10@concepts.blob  @usr@include@c++@10@debug@assertions.h.blob  @usr@include@c++@10@debug@debug.h.blob  @usr@include@c++@10@exception.blob  @usr@include@c++@10@ext@alloc_traits.h.blob  @usr@include@c++@10@ext@new_allocator.h.blob  @usr@include@c++@10@ext@numeric_traits.h.blob  @usr@include@c++@10@ext@type_traits.h.blob  @usr@include@c++@10@initializer_list.blob  @usr@include@c++@10@new.blob  (+16 more)
.ccls-cache/@home@marcos@Estudos@cmake/: main.cpp  main.cpp.blob
1. Introduction/: CMakeLists.txt  hello.cpp
2. Linking/object/: CMakeLists.txt
2. Linking/shared/: CMakeLists.txt  hello.cpp
2. Linking/static/: CMakeLists.txt  Message.cpp
3. Conditionals/: CMakeLists.txt  Message.hpp
4. Specifying Compiler/: CMakeLists.txt  guide  information.txt
5. Build Type/: CMakeLists.txt  guide
6. Compiler Flags/: CMakeLists.txt  alternative.cmake  compute-areas.cpp  geometry_circle.cpp  geometry_circle.hpp  geometry_polygon.cpp  geometry_polygon.hpp  geometry_rhombus.cpp  geometry_rhombus.hpp  geometry_square.cpp  geometry_square.hpp  guide
7. Language Standards/: CMakeLists.txt  Factory.hpp  guide
